# NYISO-Complementarity-Climate-Analysis

./: .gitignore  .lintr  LICENSE  NYISO Zone Generators.xlsx  README.md  WaveletComp.R  pyproject.toml  setup.md
code/: AveragePower.R  CompareExSeries.R  CompareSeasonalHourlyTimeseries.R  CompareSeasonalTS.R  CompareSeries.R  CorrHeatMapSeasonal.R  CreateExampleCSV.py  ExtractData.py  GenerateExWaveletGraphs.R  GenerateTimeSeriesGraphs.R  GenerateWaveletGraphs.R  PearsonMapSeasonal.R  SeasonalEnergyDemand.R  SharedFunctions.R  deps.R
code/Zone A/Near-Surface Wind Speed/: PlotNearSurfaceWindSpeedMeanZoneA.R
code/Zone A/Precipitation/: PlotPrecipitationMeanZoneA.R  PlotPrecipitationSumZoneA.R
code/Zone A/Snowfall/: PlotSnowfallFluxMeanZoneA.R  PlotSnowfallFluxSumZoneA.R
code/Zone A/Surface Downwelling Shortwave Radiation/: PlotSurfaceDownwellingShortwaveRadiationMeanZoneA.R  PlotSurfaceDownwellingShortwaveRadiationSumZoneA.R
code/Zone C/Near-Surface Wind Speed/: PlotNearSurfaceWindSpeedMeanZoneC.R
code/Zone C/Precipitation/: PlotPrecipitationMeanZoneC.R  PlotPrecipitationSumZoneC.R
code/Zone C/Snowfall/: PlotSnowfallFluxMeanZoneC.R  PlotSnowfallFluxSumZoneC.R
code/Zone C/Surface Downwelling Shortwave Radiation/: PlotSurfaceDownwellingShortwaveRadiationMeanZoneC.R  PlotSurfaceDownwellingShortwaveRadiationSumZoneC.R
code/Zone F/Near-Surface Wind Speed/: PlotNearSurfaceWindSpeedMeanZoneF.R
code/Zone F/Precipitation/: PlotPrecipitationMeanZoneF.R  PlotPrecipitationSumZoneF.R
code/Zone F/Snowfall/: PlotSnowfallFluxMeanZoneF.R  PlotSnowfallFluxSumZoneF.R
(+54 files in other folders)
